# learn-cpp

vscode-boilerplate/: CMakeLists.txt  README.md
vscode-boilerplate/src/: main.cpp
vscode-c-raylib-boilerplate/: .gitignore  CMakeLists.txt  Info.plist.in  README.md  icon.icns
vscode-c-raylib-boilerplate/.claude/: settings.local.json
vscode-c-raylib-boilerplate/src/: main.c
vscode-playdate-boilerplate/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
vscode-playdate-boilerplate/.claude/: settings.local.json
vscode-playdate-boilerplate/assets/: pdxinfo
vscode-playdate-boilerplate/cmake/: AddPlaydateApplication.cmake
vscode-playdate-boilerplate/src/: main.c  main.cpp  pdnewlib.c  pdnewlib.h  setup.c
vscode-playdate-boilerplate/vscode-playdate-boilerplate.pdx/: pdex.dylib  pdxinfo
vscode-raylib-boilerplate/: CMakeLists.txt  Info.plist.in  README.md
vscode-raylib-boilerplate/.claude/: settings.local.json
vscode-raylib-boilerplate/src/: main.cpp  partikel.h  partikel_wrapper.c  partikel_wrapper.h  reasings.h
